--- a/meal-ui/src/styles/local/partials/2-components/minimalist-sidebar/nav-links.scss
+++ b/meal-ui/src/styles/local/partials/2-components/minimalist-sidebar/nav-links.scss
@@ -7,7 +7,7 @@
 	align-items: flex-start;
 	row-gap: $spacing-06;
 	min-height: 20%;
-	min-width: 40%;
+	width: 40%;
 
 	& > * {
 		width: 100%;
